--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <h1>Welcome</h1>
-<h3 th:text="${account.name}"></h3>
-<h3 th:text="${account.email}"></h3>
-<h3 th:text="${account.password}"></h3>
-<h3 th:text="${account.age}">Age: </h3>
+Name: <h3 th:text="${account.name}"></h3>
+Email: <h3 th:text="${account.email}"></h3>
+Password: <h3 th:text="${account.password}"></h3>
+Age: <h3 th:text="${account.age}">Age: </h3>
 </body>
 </html>
